src/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Merchandise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>配送商品</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>配送</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_At__c</fullName>
        <label>配送日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>配送中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>配送完了</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>配送準備中</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>配送</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>配送番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>